Fix dark mode (modifications of BGA UI)

--- a/src/css/dark_theme/game.less
+++ b/src/css/dark_theme/game.less
@@ -529,6 +529,10 @@ a#pageheader_buy {
   color: var(--red-80);
 }
 
+.counter_in_progress {
+  color: var(--red-80) !important;
+}
+
 /* Tisaac games settings */
 
 #player_config #help-mode-switch .label,
